ch3/src/pass/snapshots/ch3__pass__register__tests__call_no_enough_registers.snap
---
source: ch3/src/pass/register.rs
expression: result.to_string_pretty()

---
locals: {}
used_callee_saved_regs: {}
stack_space: 8 bytes
start:
    pop rdi
    pop rsi
    push rdx
    mov qword [rbp - 8], rbx
    call foo
    add qword [rbp - 8], rax
    jmp conclusion

