ch3/src/pass/snapshots/ch3__pass__register__tests__example_in_book.snap
---
source: ch3/src/pass/register.rs
expression: result.to_string_pretty()

---
locals: {}
used_callee_saved_regs: {}
stack_space: 16 bytes
start:
    mov qword [rbp - 8], 1
    mov rcx, 42
    mov qword [rbp - 8], qword [rbp - 8]
    add qword [rbp - 8], 7
    mov qword [rbp - 16], qword [rbp - 8]
    mov qword [rbp - 8], qword [rbp - 8]
    add qword [rbp - 8], rcx
    mov rcx, qword [rbp - 16]
    neg rcx
    mov rax, qword [rbp - 8]
    add rax, rcx
    jmp conclusion

