ch3/src/pass/snapshots/ch3__pass__register__tests__mov_same_variables.snap
---
source: ch3/src/pass/register.rs
expression: result.to_string_pretty()

---
locals: {x.0, y.0, z.0, t.0, w.0}
used_callee_saved_regs: {}
stack_space: 0 bytes
start:
    mov rdx, rdi
    add rdx, rsi
    mov rdx, rdx
    add rdx, r8
    neg rdi
    neg rsi
    neg rdx
    neg r8

